--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 email=info@mylandmarktech.com
 ##always-auth=true
+##_auth=echo -n 'admin:admin123' | opnessl base64
 _auth=YWRtaW46YWRtaW4xMjM=
 allowRepublish=true
